--- a/style.css
+++ b/style.css
@@ -93,15 +93,14 @@ nav li a {
 
 .logo {
   float:right;
-  width:450px;
+  width:400px;
   padding-left:15px
   
 } 
-
+*!!!* 
 .text1 {
   float:left;
-  width: 375px;
+  width: 300px;
   height: 300px;
-  text-align: justify;
-  overflow: scroll;
+
 }
