--- a/style.css
+++ b/style.css
@@ -172,3 +172,14 @@ width:calc( 100% - 400px )
 .desc {
   font-size:20px
 }
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
